<resources>
    <string name="app_name">Mailrem</string>
    <string name="start_string">Start, MainActivity</string>
    <string name="buttonStart_string">Update data</string>
    <string name="buttonStop_string">Stop service</string>
    <string name="buttonNotification_string">Send notification</string>
    <string name="buttonMail_string">Get message</string>

    <string name="empty_mail_list">No messages</string>

    <!-- Menu-->
    <string name="settings_title">Settings</string>
    <string name="accounts_title">Accounts</string>
    <string name="words_title">Special words</string>

    <!--Settings-->
    <string name="settings_label">Settings</string>
    <string name="choose_email_client">Choose an Email client</string>
    <string name="not_client">Not client</string>

    <!--Authentication-->
    <string name="authentication">Mailrem</string>
    <string name="empty_account_list">No accounts</string>
    <string name="button_add_account">Add account</string>
    <string name="button_cancel_account">Back</string>

    <string name="button_add_word">Add word</string>
    <string name="new_word">New word</string>
    <string name="word_empty">Word is empty</string>
    <string name="word_already_exists">Word already exists</string>
    <string name="word_add_ok">Word added</string>
    <string name="empty_word_list">No special words</string>
    <string name="context_word_delete">Delete</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_empty">Login is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="enter_host_and_port">Do not try find host and port</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>

    <string name="host">IMAP host</string>
    <string name="port">Port</string>
    <string name="host_empty">Host is empty</string>
    <string name="port_empty">Port is empty</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="port_cast_fail">Un correct number format</string>

    <string name="account_already_exists">Account already exists</string>
    <string name="account_add_ok">Account added</string>
    <string name="default_info_text">Sign In</string>
    <string name="authorization_fail">Authorization fail</string>
    <string name="connection_progress">connect …</string>

    <string name="context_account_change">Change</string>
    <string name="context_account_delete">Delete</string>
    <string name="button_refresh">Refresh</string>

    <string name="button_ignore_message">Ignore</string>
    <string name="button_answer_message">Answer</string>
    <string name="button_back_message">Back</string>

    <string name="button_dialog_yes">Yes</string>
    <string name="button_dialog_no">Cancel</string>
    <string name="title_dialog_ignore">Forgot this message</string>
    <string name="text_dialog_ignore">You are sure</string>
    <string name="message_body">Body:\u0020</string>
    <string name="message_subject">Subject:\u0020</string>
    <string name="message_date">Date:\u0020</string>
    <string name="message_to">To:\u0020</string>
    <string name="message_from">From:\u0020</string>
</resources>
