<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_string"
            android:layout_gravity="center_horizontal"/>

    <Button android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonStart_string"
            android:onClick="onClickButtonStart"/>

    <Button android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonStop_string"
            android:onClick="onClickButtonStop"/>

    <Button android:id="@+id/buttonNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonNotification_string"
            android:onClick="onClickButtonNotification"/>

    <Button android:id="@+id/buttonMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMail_string"
            android:onClick="onClickButtonMail"/>

    <TextView android:id="@+id/viewMail"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:layout_gravity="center_horizontal"/>

    <fragment android:id="@+id/listMails"
              android:name="com.example.mailrem.app.components.ListMails"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>

</LinearLayout>
