<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/fon">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/help_text_view"
                    android:text="@string/message_from"/>

            <TextView
                    android:id="@+id/from_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/text_view_text"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/help_text_view"
                    android:text="@string/message_to"/>

            <TextView
                    android:id="@+id/to_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/text_view_text"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/help_text_view"
                    android:text="@string/message_date"/>

            <TextView
                    android:id="@+id/date_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/text_view_text"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/help_text_view"
                    android:text="@string/message_subject"/>

            <TextView
                    android:id="@+id/subject_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_view_text"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/help_text_view"
                    android:text="@string/message_body"/>

            <TextView
                    android:id="@+id/body_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_view_text"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:divider="@drawable/separator"
            android:dividerPadding="3dp"
            android:orientation="horizontal"
            android:showDividers="middle">

        <Button
                android:id="@+id/button_back_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_back_message"
                android:layout_weight="1"
                android:textColor="@color/button_text"
                android:background="@color/button_background"
                android:onClick="onClickBack"/>

        <Button
                android:id="@+id/button_ignore_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_ignore_message"
                android:layout_weight="1"
                android:textColor="@color/button_text"
                android:background="@color/button_background"
                android:onClick="onClickIgnore"/>

        <Button
                android:id="@+id/button_answer_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button_answer_message"
                android:layout_weight="1"
                android:textColor="@color/button_text"
                android:background="@color/button_background"
                android:onClick="onClickAnswer"/>

    </LinearLayout>

</RelativeLayout>