<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@mipmap/fon">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp">

        <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:textColorHint="@color/edit_text_hint"
                android:inputType="text"
                android:padding="10dp"
                android:drawableStart="@mipmap/e_mail"
                android:background="@color/edit_text_background"
                android:textColor="@color/edit_text_text"/>


        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/edit_text_hint"
                android:inputType="textPassword"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:drawableStart="@mipmap/password"
                android:background="@color/edit_text_background"
                android:textColor="@color/edit_text_text"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/use_custom_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_view_text"
                    android:text="@string/enter_host_and_port"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:padding="10dp"
                    android:layout_margin="4dp"
                    android:text="@string/cancel"
                    android:onClick="onClickButtonCancel"
                    android:textColor="@color/button_text"/>

            <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:padding="10dp"
                    android:layout_margin="4dp"
                    android:text="@string/sign_in"
                    android:onClick="onClickButtonSignIn"
                    android:textColor="@color/button_text"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:id="@+id/text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/default_info_text"/>

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:visibility="invisible"/>

</RelativeLayout>
