<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="#567375">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp">

        <EditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host"
                android:textColorHint="#cccccc"
                android:inputType="text"
                android:padding="10dp"
                android:drawableStart="@mipmap/host"/>

        <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port"
                android:textColorHint="#cccccc"
                android:inputType="number"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:drawableStart="@mipmap/port"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_prev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:padding="10dp"
                    android:layout_margin="4dp"
                    android:text="@string/prev"
                    android:onClick="onClickButtonPrev"/>

            <Button
                    android:id="@+id/button_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:padding="10dp"
                    android:layout_margin="4dp"
                    android:text="@string/next"
                    android:onClick="onClickButtonNext"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
